# CCD-SC

./: .gitignore  LICENSE  README.md
.github/workflows/: linter.yml
cis1-gg/: Cargo.toml
cis1-gg/src/: lib.rs
cis1-stable-coin/: Cargo.toml
cis1-stable-coin/src/: lib.rs
