[package]
name = "cis1-gg"
version = "1.0.0"
authors = ["GamerGold <kelvin@gamers.gold>"]
edition = "2018"
license = "MIT"
description = "A standard library for writing smart Gamers Gold Stable Coin contracts on the Concordium blockchain in Rust."
homepage = "https://github.com/GG-Glowstick/CCD-SC/"
repository = "https://github.com/GG-Glowstick/CCD-SC/"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# Reduce code size, at the cost of performance in allocation heavy-code.
wee_alloc="0.4.5"

[dependencies.concordium-std-derive]
path = "../concordium-std-derive"
version = "2.0"

[dependencies.concordium-contracts-common]
path = "../concordium-contracts-common"
version = "2.0"
default-features = false

[features]
default = ["std"]

std = ["concordium-contracts-common/std"]
wasm-test = ["concordium-std-derive/wasm-test"]
build-schema = ["concordium-std-derive/build-schema"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
# Don't unwind on panics, just trap.
# panic = "abort"