[package]
name = "cis1-gg"
version = "0.1.0"
authors = ["GamerGold <kelvin@gamers.gold>"]
edition = "2018"
license = "MIT"
description = "A standard library for writing smart Gamers Gold ERC20-Equivalent Coin contracts on the Concordium blockchain in Rust."
homepage = "https://github.com/GG-Glowstick/CCD-SC/"
repository = "https://github.com/GG-Glowstick/CCD-SC/"

[features]
default = ["std"]
std = ["concordium-std/std", "concordium-cis1/std"]

[dependencies]
concordium-std = {path = "../concordium-std", default-features = false}
concordium-cis1 = {path = "../concordium-cis1", default-features = false}

[lib]
crate-type=["cdylib", "rlib"]

[profile.release]
codegen-units = 1
opt-level = "s"